--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,238 @@
-.App {
+/* .App {
   font-family: sans-serif;
   text-align: center;
-}
+} */
 
 .welcome {
   color: black;
   font-family: "Pacifico", cursive;
 }
-.imgClass{
+.picture {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 75px;
+}
+.poster {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 1px;
+}
+
+.movie-container{
+  width: 300px;
+}
+.genre-imdb{
+  font-size: 14px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.movie-list{
+  margin-top: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.summary{
+  margin-top: 0;
+  font-size: 12px;
+}
+.movie-name{
+  margin-top: 0;
+  font-size: 24px;
+}
+
+.add-movie-form{
+  width: 300px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10px;
+  margin-bottom: 100px;
+  gap: 10px;
+}
+.discription-button{
+  margin-bottom: 10px;
+}
+.like-dislike{
+  display: flex;
+  justify-content:flex-start;
+  margin-bottom: 10px;
+  font-size: 1px;
+  margin-top: 10px;
+}
+
+.input-field{
+  display: flex;
+  flex-flow: column;
+  width: 200px;
+  align-items: center;
+  padding: 10px;
+  margin-left: 300px;
+  margin-top: 10px;
+}
+
+.login-button{
+  /* margin-left: 10px; */
+  margin-top: 10px;
+}
+.color-box{
+  border: 1px solid rgb(31, 104, 31);
+  border-radius: 10px;
+  width: 200px;
+  height: 200px;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+.main-colorbox{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.player-image{
+  border-radius: 10px;
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+}
+
+.player-component{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.player-details{
+  font-family:cursive;
+  gap: 10px;
+}
+
+.add-player{
+  width: 300px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10px;
+  margin-bottom: 100px;
+  gap: 10px;
+}
+
+.menu-bar{
+  display: flex;
+  justify-content:flex-start;
+  gap:25px;
+  
+}
+
+.sport-nation{
+  margin-bottom: 10px;
+}
+
+.info{
+  width: 200px;
+  height: fit-content;
+}
+
+.info-button{
+  font-size: xx-small;
+}
+
+.counter-edit{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.counter-delete{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.info-delete{
+  display: flex;
+  justify-content:space-between;
+}
+
+.task-name{
+  cursor: pointer;
+}
+
+.completed-task{
+  text-decoration: line-through;
+}
+
+.list-of-task-todo{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+/* ////////////////////////////////////////////////////////////////////////// */
+
+/* TIC TAC TOE STYLING */
+
+/* .App {
+  font-family: sans-serif;
+  text-align: center;
+} */
+
+.game-box{
+  height: 160px;
+  width: 160px;
+  border: 1px solid black;
+  font-size: 160px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-style: italic;
+}
+
+.board-container{
+  height: 480px;
+  width: 492px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.full-game{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+/* //////////////////////////////////////////////////////////////////////////////// */
+
+/* .welcome {
+  color: black;
+  font-family: "Pacifico", cursive;
+}
+.char-img{
   height: 150px;
   width: 150px;
   border-radius: 75px;
   object-fit: cover;
 }
-/* .picture {
+
+.characters-container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.char-name{
+  font-family:cursive;
+} */
+/* .picture {  
   width: 150px;
   height: 150px;
   object-fit: cover;
